--- a/static/css/profile_view.css
+++ b/static/css/profile_view.css
@@ -208,7 +208,6 @@ html.dark-mode .panel {
 
 .section-body {
     font-size: 0. nine rem;
-    color: #374151;
     line-height: 1.6;
     padding-bottom: 5px;
 }
@@ -236,15 +235,4 @@ html.dark-mode .panel {
 
 .flash-card {
     margin-bottom: 18px;
-}
-
-.theme-toggle {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    height: 48px;
-    width: 48px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
